--- a/style.css
+++ b/style.css
@@ -1,6 +1,26 @@
-body {
-     backgroud-color:#0bc7c4
+.imagem{
+  width: 500px;
 }
+
+nav{
+  
+  font-size: 30px;
+}
+
+nav li{
+     display: inline-flex;
+     margin-left: 30%;
+}
+
+ nav li:hover{
+     font-size: 35px;
+     transition: 0.8s;
+ }
+
+
+
+
+
 
 h1 {
   text-align: center;
